--- a/bibtex.bib
+++ b/bibtex.bib
@@ -18000,3 +18000,114 @@ keywords = {Prompt Engineering}
       url={https://arxiv.org/abs/2311.13538},
       keywords = {Chain of Thought}
 }
+
+@article{DBLP:journals/corr/abs-2407-04020,
+  author       = {Amy Xin and
+                  Yunjia Qi and
+                  Zijun Yao and
+                  Fangwei Zhu and
+                  Kaisheng Zeng and
+                  Bin Xu and
+                  Lei Hou and
+                  Juanzi Li},
+  title        = {{LLMAEL:} Large Language Models are Good Context Augmenters for Entity
+                  Linking},
+  journal      = {CoRR},
+  volume       = {abs/2407.04020},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2407.04020},
+  doi          = {10.48550/ARXIV.2407.04020},
+  eprinttype    = {arXiv},
+  eprint       = {2407.04020},
+  timestamp    = {Wed, 07 Aug 2024 21:29:44 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2407-04020.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {LLM and KG}
+}
+
+@inproceedings{DBLP:conf/cikm/0003H0LL0C24,
+  author       = {Qi Liu and
+                  Yongyi He and
+                  Tong Xu and
+                  Defu Lian and
+                  Che Liu and
+                  Zhi Zheng and
+                  Enhong Chen},
+  editor       = {Edoardo Serra and
+                  Francesca Spezzano},
+  title        = {UniMEL: {A} Unified Framework for Multimodal Entity Linking with Large
+                  Language Models},
+  booktitle    = {Proceedings of the 33rd {ACM} International Conference on Information
+                  and Knowledge Management, {CIKM} 2024, Boise, ID, USA, October 21-25,
+                  2024},
+  pages        = {1909--1919},
+  publisher    = {{ACM}},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3627673.3679793},
+  doi          = {10.1145/3627673.3679793},
+  timestamp    = {Sat, 30 Nov 2024 21:10:27 +0100},
+  biburl       = {https://dblp.org/rec/conf/cikm/0003H0LL0C24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {LLM and KG}
+}
+
+@inproceedings{DBLP:conf/emnlp/Liu0ZWLC24,
+  author       = {Xukai Liu and
+                  Ye Liu and
+                  Kai Zhang and
+                  Kehang Wang and
+                  Qi Liu and
+                  Enhong Chen},
+  editor       = {Yaser Al{-}Onaizan and
+                  Mohit Bansal and
+                  Yun{-}Nung Chen},
+  title        = {OneNet: {A} Fine-Tuning Free Framework for Few-Shot Entity Linking
+                  via Large Language Model Prompting},
+  booktitle    = {Proceedings of the 2024 Conference on Empirical Methods in Natural
+                  Language Processing, {EMNLP} 2024, Miami, FL, USA, November 12-16,
+                  2024},
+  pages        = {13634--13651},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2024},
+  url          = {https://aclanthology.org/2024.emnlp-main.756},
+  timestamp    = {Thu, 14 Nov 2024 17:20:55 +0100},
+  biburl       = {https://dblp.org/rec/conf/emnlp/Liu0ZWLC24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {LLM and KG}
+}
+
+@article{DBLP:journals/www/ZhuWCQOYDCZ24,
+  author       = {Yuqi Zhu and
+                  Xiaohan Wang and
+                  Jing Chen and
+                  Shuofei Qiao and
+                  Yixin Ou and
+                  Yunzhi Yao and
+                  Shumin Deng and
+                  Huajun Chen and
+                  Ningyu Zhang},
+  title        = {LLMs for knowledge graph construction and reasoning: recent capabilities
+                  and future opportunities},
+  journal      = {World Wide Web {(WWW)}},
+  volume       = {27},
+  number       = {5},
+  pages        = {58},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/s11280-024-01297-w},
+  doi          = {10.1007/S11280-024-01297-W},
+  timestamp    = {Mon, 02 Sep 2024 09:38:28 +0200},
+  biburl       = {https://dblp.org/rec/journals/www/ZhuWCQOYDCZ24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {LLM and KG}
+}
+
+@misc{wu2024thinkingknowledgegraphsenhancing,
+      title={Thinking with Knowledge Graphs: Enhancing LLM Reasoning Through Structured Data},
+      author={Xue Wu and Kostas Tsioutsiouliklis},
+      year={2024},
+      eprint={2412.10654},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2412.10654},
+      keywords = {knowledge enhanced}
+}
