--- a/bibtex.bib
+++ b/bibtex.bib
@@ -18111,3 +18111,28 @@ keywords = {Prompt Engineering}
       url={https://arxiv.org/abs/2412.10654},
       keywords = {knowledge enhanced}
 }
+
+@inproceedings{DBLP:conf/emnlp/WanSNDEAP23,
+  author       = {Xingchen Wan and
+                  Ruoxi Sun and
+                  Hootan Nakhost and
+                  Hanjun Dai and
+                  Julian Eisenschlos and
+                  Sercan {\"{O}}. Arik and
+                  Tomas Pfister},
+  editor       = {Houda Bouamor and
+                  Juan Pino and
+                  Kalika Bali},
+  title        = {Universal Self-Adaptive Prompting},
+  booktitle    = {Proceedings of the 2023 Conference on Empirical Methods in Natural
+                  Language Processing, {EMNLP} 2023, Singapore, December 6-10, 2023},
+  pages        = {7437--7462},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2023},
+  url          = {https://doi.org/10.18653/v1/2023.emnlp-main.461},
+  doi          = {10.18653/V1/2023.EMNLP-MAIN.461},
+  timestamp    = {Fri, 12 Apr 2024 13:11:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/emnlp/WanSNDEAP23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Prompt Engineering}
+}
