--- a/bibtex.bib
+++ b/bibtex.bib
@@ -18136,3 +18136,94 @@ keywords = {Prompt Engineering}
   bibsource    = {dblp computer science bibliography, https://dblp.org},
   keywords = {Prompt Engineering}
 }
+
+@inproceedings{DBLP:conf/nips/Wan0NA24,
+  author       = {Xingchen Wan and
+                  Ruoxi Sun and
+                  Hootan Nakhost and
+                  Sercan {\"{O}}. Arik},
+  editor       = {Amir Globersons and
+                  Lester Mackey and
+                  Danielle Belgrave and
+                  Angela Fan and
+                  Ulrich Paquet and
+                  Jakub M. Tomczak and
+                  Cheng Zhang},
+  title        = {Teach Better or Show Smarter? On Instructions and Exemplars in Automatic
+                  Prompt Optimization},
+  booktitle    = {NeurIPS},
+  year         = {2024},
+  url          = {http://papers.nips.cc/paper\_files/paper/2024/hash/6b031defd145b02bed031093d8797bb3-Abstract-Conference.html},
+  timestamp    = {Thu, 13 Feb 2025 16:56:43 +0100},
+  biburl       = {https://dblp.org/rec/conf/nips/Wan0NA24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Prompt Engineering}
+}
+
+@inproceedings{DBLP:conf/acl/Xiong0Z24,
+  author       = {Guanming Xiong and
+                  Junwei Bao and
+                  Wen Zhao},
+  editor       = {Lun{-}Wei Ku and
+                  Andre Martins and
+                  Vivek Srikumar},
+  title        = {Interactive-KBQA: Multi-Turn Interactions for Knowledge Base Question
+                  Answering with Large Language Models},
+  booktitle    = {ACL},
+  pages        = {10561--10582},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2024},
+  url          = {https://doi.org/10.18653/v1/2024.acl-long.569},
+  doi          = {10.18653/V1/2024.ACL-LONG.569},
+  timestamp    = {Tue, 24 Sep 2024 10:55:43 +0200},
+  biburl       = {https://dblp.org/rec/conf/acl/Xiong0Z24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Question Answering}
+}
+
+@article{DBLP:journals/corr/abs-2406-17231,
+  author       = {Tong Zhou and
+                  Yubo Chen and
+                  Kang Liu and
+                  Jun Zhao},
+  title        = {CogMG: Collaborative Augmentation Between Large Language Model and
+                  Knowledge Graph},
+  journal      = {CoRR},
+  volume       = {abs/2406.17231},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2406.17231},
+  doi          = {10.48550/ARXIV.2406.17231},
+  eprinttype    = {arXiv},
+  eprint       = {2406.17231},
+  timestamp    = {Thu, 25 Jul 2024 07:47:43 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2406-17231.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Question Answering}
+}
+
+@inproceedings{DBLP:conf/emnlp/XuHC0STL0024,
+  author       = {Yao Xu and
+                  Shizhu He and
+                  Jiabei Chen and
+                  Zihao Wang and
+                  Yangqiu Song and
+                  Hanghang Tong and
+                  Guang Liu and
+                  Jun Zhao and
+                  Kang Liu},
+  editor       = {Yaser Al{-}Onaizan and
+                  Mohit Bansal and
+                  Yun{-}Nung Chen},
+  title        = {Generate-on-Graph: Treat {LLM} as both Agent and {KG} for Incomplete
+                  Knowledge Graph Question Answering},
+  booktitle    = {EMNLP},
+  pages        = {18410--18430},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2024},
+  url          = {https://aclanthology.org/2024.emnlp-main.1023},
+  timestamp    = {Thu, 14 Nov 2024 17:20:55 +0100},
+  biburl       = {https://dblp.org/rec/conf/emnlp/XuHC0STL0024.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Question Answering}
+}
+
