--- a/bibtex.bib
+++ b/bibtex.bib
@@ -18227,3 +18227,120 @@ keywords = {Prompt Engineering}
   keywords = {Question Answering}
 }
 
+@inproceedings{DBLP:conf/emnlp/LiuLLYL24,
+  author       = {Siyi Liu and
+                  Yang Li and
+                  Jiang Li and
+                  Shan Yang and
+                  Yunshi Lan},
+  editor       = {Yaser Al{-}Onaizan and
+                  Mohit Bansal and
+                  Yun{-}Nung Chen},
+  title        = {Unleashing the Power of Large Language Models in Zero-shot Relation
+                  Extraction via Self-Prompting},
+  booktitle    = {EMNLP},
+  pages        = {13147--13161},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2024},
+  url          = {https://aclanthology.org/2024.findings-emnlp.769},
+  timestamp    = {Mon, 18 Nov 2024 09:06:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/emnlp/LiuLLYL24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Information Extraction}
+}
+
+@article{DBLP:journals/corr/abs-2403-14888,
+  author       = {Lilong Xue and
+                  Dan Zhang and
+                  Yuxiao Dong and
+                  Jie Tang},
+  title        = {AutoRE: Document-Level Relation Extraction with Large Language Models},
+  journal      = {CoRR},
+  volume       = {abs/2403.14888},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2403.14888},
+  doi          = {10.48550/ARXIV.2403.14888},
+  eprinttype    = {arXiv},
+  eprint       = {2403.14888},
+  timestamp    = {Wed, 12 Jun 2024 21:04:49 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2403-14888.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Information Extraction}
+}
+
+@inproceedings{DBLP:conf/acl/QiDW24,
+  author       = {Kunxun Qi and
+                  Jianfeng Du and
+                  Hai Wan},
+  editor       = {Lun{-}Wei Ku and
+                  Andre Martins and
+                  Vivek Srikumar},
+  title        = {End-to-end Learning of Logical Rules for Enhancing Document-level
+                  Relation Extraction},
+  booktitle    = {ACL},
+  pages        = {7247--7263},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2024},
+  url          = {https://doi.org/10.18653/v1/2024.acl-long.391},
+  doi          = {10.18653/V1/2024.ACL-LONG.391},
+  timestamp    = {Tue, 24 Sep 2024 10:55:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/acl/QiDW24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Information Extraction}
+}
+
+@article{DBLP:journals/corr/abs-2404-19146,
+  author       = {Linyi Ding and
+                  Sizhe Zhou and
+                  Jinfeng Xiao and
+                  Jiawei Han},
+  title        = {Automated Construction of Theme-specific Knowledge Graphs},
+  journal      = {CoRR},
+  volume       = {abs/2404.19146},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2404.19146},
+  doi          = {10.48550/ARXIV.2404.19146},
+  eprinttype    = {arXiv},
+  eprint       = {2404.19146},
+  timestamp    = {Mon, 27 May 2024 14:55:45 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2404-19146.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {LLM and KG}
+}
+
+@inproceedings{DBLP:conf/emnlp/TanLWBJBKL0024,
+  author       = {Zhen Tan and
+                  Dawei Li and
+                  Song Wang and
+                  Alimohammad Beigi and
+                  Bohan Jiang and
+                  Amrita Bhattacharjee and
+                  Mansooreh Karami and
+                  Jundong Li and
+                  Lu Cheng and
+                  Huan Liu},
+  editor       = {Yaser Al{-}Onaizan and
+                  Mohit Bansal and
+                  Yun{-}Nung Chen},
+  title        = {Large Language Models for Data Annotation and Synthesis: {A} Survey},
+  booktitle    = {EMNLP},
+  pages        = {930--957},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2024},
+  url          = {https://aclanthology.org/2024.emnlp-main.54},
+  timestamp    = {Mon, 10 Feb 2025 14:32:08 +0100},
+  biburl       = {https://dblp.org/rec/conf/emnlp/TanLWBJBKL0024.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Survey}
+}
+
+@misc{zhang2025lightthinkerthinkingstepbystepcompression,
+      title={LightThinker: Thinking Step-by-Step Compression},
+      author={Jintian Zhang and Yuqi Zhu and Mengshu Sun and Yujie Luo and Shuofei Qiao and Lun Du and Da Zheng and Huajun Chen and Ningyu Zhang},
+      year={2025},
+      eprint={2502.15589},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2502.15589},
+      keywords = {Chain of Thought}
+}
