--- a/bibtex.bib
+++ b/bibtex.bib
@@ -18344,3 +18344,160 @@ keywords = {Prompt Engineering}
       url={https://arxiv.org/abs/2502.15589},
       keywords = {Chain of Thought}
 }
+
+
+@article{DBLP:journals/corr/abs-2311-05232,
+  author       = {Lei Huang and
+                  Weijiang Yu and
+                  Weitao Ma and
+                  Weihong Zhong and
+                  Zhangyin Feng and
+                  Haotian Wang and
+                  Qianglong Chen and
+                  Weihua Peng and
+                  Xiaocheng Feng and
+                  Bing Qin and
+                  Ting Liu},
+  title        = {A Survey on Hallucination in Large Language Models: Principles, Taxonomy,
+                  Challenges, and Open Questions},
+  journal      = {CoRR},
+  volume       = {abs/2311.05232},
+  year         = {2023},
+  url          = {https://doi.org/10.48550/arXiv.2311.05232},
+  doi          = {10.48550/ARXIV.2311.05232},
+  eprinttype    = {arXiv},
+  eprint       = {2311.05232},
+  timestamp    = {Tue, 13 Aug 2024 16:04:11 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2311-05232.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Survey}
+}
+
+
+@inproceedings{DBLP:conf/nips/DziriLSLJLWWB0H23,
+  author       = {Nouha Dziri and
+                  Ximing Lu and
+                  Melanie Sclar and
+                  Xiang Lorraine Li and
+                  Liwei Jiang and
+                  Bill Yuchen Lin and
+                  Sean Welleck and
+                  Peter West and
+                  Chandra Bhagavatula and
+                  Ronan Le Bras and
+                  Jena D. Hwang and
+                  Soumya Sanyal and
+                  Xiang Ren and
+                  Allyson Ettinger and
+                  Za{\"{\i}}d Harchaoui and
+                  Yejin Choi},
+  editor       = {Alice Oh and
+                  Tristan Naumann and
+                  Amir Globerson and
+                  Kate Saenko and
+                  Moritz Hardt and
+                  Sergey Levine},
+  title        = {Faith and Fate: Limits of Transformers on Compositionality},
+  booktitle    = {Advances in Neural Information Processing Systems 36: Annual Conference
+                  on Neural Information Processing Systems 2023, NeurIPS 2023, New Orleans,
+                  LA, USA, December 10 - 16, 2023},
+  year         = {2023},
+  url          = {http://papers.nips.cc/paper\_files/paper/2023/hash/deb3c28192f979302c157cb653c15e90-Abstract-Conference.html},
+  timestamp    = {Wed, 03 Jul 2024 14:58:17 +0200},
+  biburl       = {https://dblp.org/rec/conf/nips/DziriLSLJLWWB0H23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Multi-Step Reasoning}
+}
+
+@article{DBLP:journals/corr/abs-2501-09686,
+  author       = {Fengli Xu and
+                  Qianyue Hao and
+                  Zefang Zong and
+                  Jingwei Wang and
+                  Yunke Zhang and
+                  Jingyi Wang and
+                  Xiaochong Lan and
+                  Jiahui Gong and
+                  Tianjian Ouyang and
+                  Fanjin Meng and
+                  Chenyang Shao and
+                  Yuwei Yan and
+                  Qinglong Yang and
+                  Yiwen Song and
+                  Sijian Ren and
+                  Xinyuan Hu and
+                  Yu Li and
+                  Jie Feng and
+                  Chen Gao and
+                  Yong Li},
+  title        = {Towards Large Reasoning Models: {A} Survey of Reinforced Reasoning
+                  with Large Language Models},
+  journal      = {CoRR},
+  volume       = {abs/2501.09686},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2501.09686},
+  doi          = {10.48550/ARXIV.2501.09686},
+  eprinttype    = {arXiv},
+  eprint       = {2501.09686},
+  timestamp    = {Tue, 25 Feb 2025 08:17:20 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2501-09686.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Survey}
+}
+
+
+@article{DBLP:journals/corr/abs-2502-17419,
+  author       = {Zhong{-}Zhi Li and
+                  Duzhen Zhang and
+                  Ming{-}Liang Zhang and
+                  Jiaxin Zhang and
+                  Zengyan Liu and
+                  Yuxuan Yao and
+                  Haotian Xu and
+                  Junhao Zheng and
+                  Pei{-}Jie Wang and
+                  Xiuyi Chen and
+                  Yingying Zhang and
+                  Fei Yin and
+                  Jiahua Dong and
+                  Zhijiang Guo and
+                  Le Song and
+                  Cheng{-}Lin Liu},
+  title        = {From System 1 to System 2: {A} Survey of Reasoning Large Language
+                  Models},
+  journal      = {CoRR},
+  volume       = {abs/2502.17419},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2502.17419},
+  doi          = {10.48550/ARXIV.2502.17419},
+  eprinttype    = {arXiv},
+  eprint       = {2502.17419},
+  timestamp    = {Fri, 21 Mar 2025 12:54:49 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2502-17419.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Survey}
+}
+
+
+@article{DBLP:journals/corr/abs-2502-13389,
+  author       = {Kongcheng Zhang and
+                  Qi Yao and
+                  Baisheng Lai and
+                  Jiaxing Huang and
+                  Wenkai Fang and
+                  Dacheng Tao and
+                  Mingli Song and
+                  Shunyu Liu},
+  title        = {Reasoning with Reinforced Functional Token Tuning},
+  journal      = {CoRR},
+  volume       = {abs/2502.13389},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2502.13389},
+  doi          = {10.48550/ARXIV.2502.13389},
+  eprinttype    = {arXiv},
+  eprint       = {2502.13389},
+  timestamp    = {Wed, 19 Mar 2025 11:49:52 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2502-13389.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Multi-Step Reasoning}
+}
