--- a/bibtex.bib
+++ b/bibtex.bib
@@ -18501,3 +18501,235 @@ keywords = {Prompt Engineering}
   bibsource    = {dblp computer science bibliography, https://dblp.org},
   keywords = {Multi-Step Reasoning}
 }
+
+@article{DBLP:journals/corr/abs-2410-23743,
+  author       = {Ming Li and
+                  Yanhong Li and
+                  Tianyi Zhou},
+  title        = {What Happened in LLMs Layers when Trained for Fast vs. Slow Thinking:
+                  {A} Gradient Perspective},
+  journal      = {CoRR},
+  volume       = {abs/2410.23743},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2410.23743},
+  doi          = {10.48550/ARXIV.2410.23743},
+  eprinttype    = {arXiv},
+  eprint       = {2410.23743},
+  timestamp    = {Fri, 29 Nov 2024 21:16:30 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2410-23743.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+}
+
+@article{DBLP:journals/corr/abs-2503-16419,
+  author       = {Yang Sui and
+                  Yu{-}Neng Chuang and
+                  Guanchu Wang and
+                  Jiamu Zhang and
+                  Tianyi Zhang and
+                  Jiayi Yuan and
+                  Hongyi Liu and
+                  Andrew Wen and
+                  Shaochen Zhong and
+                  Hanjie Chen and
+                  Xia Ben Hu},
+  title        = {Stop Overthinking: {A} Survey on Efficient Reasoning for Large Language
+                  Models},
+  journal      = {CoRR},
+  volume       = {abs/2503.16419},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2503.16419},
+  doi          = {10.48550/ARXIV.2503.16419},
+  eprinttype    = {arXiv},
+  eprint       = {2503.16419},
+  timestamp    = {Mon, 14 Apr 2025 22:18:45 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2503-16419.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+}
+
+@article{DBLP:journals/corr/abs-2503-17539,
+  author       = {Bhishma Dedhia and
+                  David Bourgin and
+                  Krishna Kumar Singh and
+                  Yuheng Li and
+                  Yan Kang and
+                  Zhan Xu and
+                  Niraj K. Jha and
+                  Yuchen Liu},
+  title        = {Generating, Fast and Slow: Scalable Parallel Video Generation with
+                  Video Interface Networks},
+  journal      = {CoRR},
+  volume       = {abs/2503.17539},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2503.17539},
+  doi          = {10.48550/ARXIV.2503.17539},
+  eprinttype    = {arXiv},
+  eprint       = {2503.17539},
+  timestamp    = {Tue, 15 Apr 2025 21:14:07 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2503-17539.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+}
+
+@article{DBLP:journals/corr/abs-2501-01306,
+  author       = {Xiaoxue Cheng and
+                  Junyi Li and
+                  Wayne Xin Zhao and
+                  Ji{-}Rong Wen},
+  title        = {Think More, Hallucinate Less: Mitigating Hallucinations via Dual Process
+                  of Fast and Slow Thinking},
+  journal      = {CoRR},
+  volume       = {abs/2501.01306},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2501.01306},
+  doi          = {10.48550/ARXIV.2501.01306},
+  eprinttype    = {arXiv},
+  eprint       = {2501.01306},
+  timestamp    = {Tue, 11 Feb 2025 20:53:59 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2501-01306.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+}
+
+@article{DBLP:journals/corr/abs-2503-04548,
+  author       = {Zhipeng Chen and
+                  Yingqian Min and
+                  Beichen Zhang and
+                  Jie Chen and
+                  Jinhao Jiang and
+                  Daixuan Cheng and
+                  Wayne Xin Zhao and
+                  Zheng Liu and
+                  Xu Miao and
+                  Yang Lu and
+                  Lei Fang and
+                  Zhongyuan Wang and
+                  Ji{-}Rong Wen},
+  title        = {An Empirical Study on Eliciting and Improving R1-like Reasoning Models},
+  journal      = {CoRR},
+  volume       = {abs/2503.04548},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2503.04548},
+  doi          = {10.48550/ARXIV.2503.04548},
+  eprinttype    = {arXiv},
+  eprint       = {2503.04548},
+  timestamp    = {Fri, 11 Apr 2025 09:56:29 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2503-04548.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+
+
+@article{DBLP:journals/corr/abs-2503-12918,
+  author       = {Pengcheng Wen and
+                  Jiaming Ji and
+                  Chi{-}Min Chan and
+                  Juntao Dai and
+                  Donghai Hong and
+                  Yaodong Yang and
+                  Sirui Han and
+                  Yike Guo},
+  title        = {ThinkPatterns-21k: {A} Systematic Study on the Impact of Thinking
+                  Patterns in LLMs},
+  journal      = {CoRR},
+  volume       = {abs/2503.12918},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2503.12918},
+  doi          = {10.48550/ARXIV.2503.12918},
+  eprinttype    = {arXiv},
+  eprint       = {2503.12918},
+  timestamp    = {Mon, 14 Apr 2025 22:18:29 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2503-12918.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+}
+
+
+@article{DBLP:journals/corr/abs-2502-04404,
+  author       = {Xiao{-}Wen Yang and
+                  Xuan{-}Yi Zhu and
+                  Wen{-}Da Wei and
+                  Dingchu Zhang and
+                  Jie{-}Jing Shao and
+                  Zhi Zhou and
+                  Lan{-}Zhe Guo and
+                  Yufeng Li},
+  title        = {Step Back to Leap Forward: Self-Backtracking for Boosting Reasoning
+                  of Language Models},
+  journal      = {CoRR},
+  volume       = {abs/2502.04404},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2502.04404},
+  doi          = {10.48550/ARXIV.2502.04404},
+  eprinttype    = {arXiv},
+  eprint       = {2502.04404},
+  timestamp    = {Fri, 14 Mar 2025 08:06:21 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2502-04404.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Slow Thinking}
+}
+
+@article{DBLP:journals/corr/abs-2412-10827,
+  author       = {Zongqian Wu and
+                  Baoduo Xu and
+                  Ruochen Cui and
+                  Mengmeng Zhan and
+                  Xiaofeng Zhu and
+                  Lei Feng},
+  title        = {Rethinking Chain-of-Thought from the Perspective of Self-Training},
+  journal      = {CoRR},
+  volume       = {abs/2412.10827},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2412.10827},
+  doi          = {10.48550/ARXIV.2412.10827},
+  eprinttype    = {arXiv},
+  eprint       = {2412.10827},
+  timestamp    = {Thu, 23 Jan 2025 08:12:47 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2412-10827.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Chain of Thought}
+}
+
+@article{DBLP:journals/corr/abs-2502-10858,
+  author       = {Zongqian Wu and
+                  Tianyu Li and
+                  Baoduo Xu and
+                  Jiaying Yang and
+                  Mengmeng Zhan and
+                  Xiaofeng Zhu and
+                  Lei Feng},
+  title        = {Is Depth All You Need? An Exploration of Iterative Reasoning in LLMs},
+  journal      = {CoRR},
+  volume       = {abs/2502.10858},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2502.10858},
+  doi          = {10.48550/ARXIV.2502.10858},
+  eprinttype    = {arXiv},
+  eprint       = {2502.10858},
+  timestamp    = {Mon, 17 Mar 2025 14:37:07 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2502-10858.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  keywords = {Chain of Thought}
+}
+
+@inproceedings{
+ anonymous2025an,
+ title={An Empirical Study of Activating Slow-thinking Capability of Large Language Models},
+ author={Anonymous},
+ booktitle={Submitted to ACL Rolling Review - December 2024},
+ year={2025},
+ url={https://openreview.net/forum?id=fBuWs9swzc},
+ keywords = {Slow Thinking}
+}
+
+
+@misc{li2025cotragintegratingchainthought,
+      title={CoT-RAG: Integrating Chain of Thought and Retrieval-Augmented Generation to Enhance Reasoning in Large Language Models},
+      author={Feiyang Li and Peng Fang and Zhan Shi and Arijit Khan and Fang Wang and Dan Feng and Weihao Wang and Xin Zhang and Yongjian Cui},
+      year={2025},
+      eprint={2504.13534},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2504.13534},
+      keywords = {Chain of Thought}
+}
